--- a/Contoso.Events/Contoso.Events.Web/Web.config
+++ b/Contoso.Events/Contoso.Events.Web/Web.config
@@ -7,6 +7,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="SignInQueueName" value="signin" />
     <add key="LatestEventsCount" value="2" />
+    <add key="SearchAccessKey" value="" />
   </appSettings>
   <connectionStrings>
     <add name="Microsoft.WindowsAzure.Storage.ConnectionString" connectionString="" />
@@ -24,7 +25,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
