--- a/Contoso.Events/Contoso.Events.Web/Web.config
+++ b/Contoso.Events/Contoso.Events.Web/Web.config
@@ -8,10 +8,13 @@
     <add key="SignInQueueName" value="signin" />
     <add key="LatestEventsCount" value="2" />
     <add key="SearchAccessKey" value="" />
+    <add key="aad:ClientId" value="09746ed6-ac39-43ee-86b4-672bf406a8fb" />
+    <add key="aad:Authority" value="https://login.microsoftonline.com/joonasapps.onmicrosoft.com/"/>
+    <add key="aad:PostLogoutRedirectUri" value="https://localhost:44371/" />
   </appSettings>
   <connectionStrings>
     <add name="Microsoft.WindowsAzure.Storage.ConnectionString" connectionString="" />
-    <add name="EventsContextConnectionString" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="EventsContextConnectionString" connectionString="Data Source=.;Initial Catalog=AzureAcademyHackathonDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.diagnostics>
     <trace>
@@ -68,6 +71,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
